apps/media/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    name: media
    istio-injection: enabled
