apps/media/sonarr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  type: ClusterIP
  ports:
  - port: 8989
    targetPort: 8989
    protocol: TCP
    name: http
  selector:
    app: sonarr
