apps/media/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: media-gateway
  namespace: media
spec:
  selector:
    istio: ilb-gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "jellyfin.local"
    - "qbittorrent.local"
    - "prowlarr.local"
    - "sonarr.local"
    - "radarr.local"
